<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="180dp"
    android:layout_marginLeft="4dp"
    android:layout_marginTop="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginBottom="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/offers_list_item_layout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weight"
            android:id="@+id/textView2"
            android:layout_alignTop="@+id/offers_list_item_weight"
            android:layout_alignLeft="@+id/textView3"
            android:layout_alignStart="@+id/textView3"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_def"
            android:id="@+id/offers_list_item_weight"
            android:layout_below="@+id/offers_list_item_price"
            android:layout_toRightOf="@+id/textView2"
            android:layout_toEndOf="@+id/textView2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_def_price"
            android:id="@+id/offers_list_item_price"
            android:layout_below="@+id/frameLayout"
            android:layout_toRightOf="@+id/textView3"
            android:layout_toEndOf="@+id/textView3"/>


        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/add_buy_icon"
            android:id="@+id/offers_list_item_button_buy"
            android:layout_marginRight="8dp"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <NumberPicker
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:descendantFocusability="blocksDescendants"
            android:theme="@style/AppTheme.Picker"
            android:id="@+id/offers_list_item_numberpicker"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@+id/offers_list_item_button_buy"
            android:layout_toStartOf="@+id/offers_list_item_button_buy"/>

        <FrameLayout
            android:layout_width="150dp"
            android:layout_height="100dp"
            android:id="@+id/frameLayout"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_below="@+id/item_list_offers_name"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/offers_list_item_photo"
                android:src="@drawable/no_photo_150x100"
                android:layout_gravity="right|bottom"/>
        </FrameLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingRight="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:id="@+id/offers_list_item_textview_numberpicker_helper"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="New Text"
            android:id="@+id/item_list_offers_name"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingTop="4dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:id="@+id/textView3"
            android:layout_alignBaseline="@+id/offers_list_item_price"
            android:layout_alignBottom="@+id/offers_list_item_price"
            android:layout_alignLeft="@+id/frameLayout"
            android:layout_alignStart="@+id/frameLayout"/>

    </RelativeLayout>


</android.support.v7.widget.CardView>
